Mi primera version del tetris

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="js/juego/tetris.js" type="module"></script>
   </head>
-  <body onload="inicializar()" class="bg-secondary">
+  <body id="body" class="bg-secondary">
     <div class="container d-flex justify-content-center">
       <canvas id="canvas" style="border: 2px solid black" class="mt-2"></canvas>
     </div>
