--- a/index.html
+++ b/index.html
@@ -15,5 +15,18 @@
     <div class="container d-flex justify-content-center">
       <canvas id="canvas" style="border: 2px solid black" class="mt-2"></canvas>
     </div>
+    <div class="d-flex justify-content-center">
+      <div class="m-3">
+        <button id="btnIzq">IZQ</button>
+        <button id="btnRotar">ROTAR</button>
+        <button id="btnDer">DER</button>
+      </div>
+      <div class="m-3">
+        <button id="btnBajar">BAJAR</button>
+        <button id="btnReset">REINICIAR</button>
+      </div>
+    </div>
+
+    <script src="js/teclado/botones.js" type="module"></script>
   </body>
 </html>
